<resources>
    
    <!-- Auth -->
    <string name="app_name">Plantcare</string>
    <string name="login_social_network_text">Or log in with Facebook, Twitter or Google</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_your_account">Create Your Account!</string>
    <string name="lorem_text">Arcu aptent placerat blandit quis, lectus sit orci net ut. Eleifnd ut mauris</string>
    <string name="lorem_text_2">Non suspendisse mi eu et sem, commodo hymenaeos aliquet felis magna.</string>
    <string name="lorem_text_3">Mi eu et sem, commodo hymenaeos aliquet felis magna.</string>
    <string name="my_plants">My Plants</string>
    <string name="manage_moderators">Manage Moderators</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="moderators">moderators</string>
    <string name="invite_moderators">Invite moderators</string>
    <string name="enter_email">enter email</string>
    <string name="add_new"><u>Add new</u></string>
    <string name="close">Close</string>


</resources>
